# egui_styled

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  README.md
.github/workflows/: ci.yml
docs/: PLAN.md
examples/: all_widgets.rs  basic.rs  composable_styles.rs  containers.rs  game_over.rs  gradients.rs  images.rs  layout.rs  shadows.rs  stack.rs  text_edit.rs  text_effects.rs  theme_demo.rs  visibility.rs
src/: apply.rs  color.rs  lib.rs  prelude.rs  show.rs  state.rs
src/containers/: area.rs  column.rs  distribute.rs  frame.rs  mod.rs  row.rs  spacer.rs  stack.rs  wrap.rs
src/style/: mod.rs  shared_style.rs  style_builders.rs
src/theme/: mod.rs  theme_ext.rs  web_palette.rs
src/widgets/: button.rs  checkbox.rs  combo_box.rs  image.rs  label.rs  mod.rs  slider.rs  text_edit.rs  text_effects.rs
tests/: text_effects.rs
