[package]
name = "egui_styled"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["David Spray <dev@david-spray.me>"]
description = "Tailwind-style utility styling for egui: per-widget hover/focus/active variants, design tokens, and composable style functions."
license = "MIT OR Apache-2.0"
repository = "https://github.com/dspray95/egui_styled"
documentation = "https://docs.rs/egui_styled"
readme = "README.md"
keywords = ["egui", "gui", "styling", "theme", "ui"]
categories = ["gui"]
exclude = [
    "docs/",
    ".github/",
    "target/",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
egui = "0.34.2"

[dev-dependencies]
eframe = "0.34"
